# fm-cp

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml  uninstall.sh
src/fm_cp/: __init__.py  __main__.py
